--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.19",
+    "@xyflow/react": "^12.10.0",
     "axios": "^1.13.2",
     "next": "16.1.4",
     "react": "19.2.3",
